Action: Set Pythonpath

--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -20,6 +20,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel twine pytest pytest-datadir
     - name: Test with pytest
+      env:
+        PYTHONPATH: "${{ github.workspace }}:${{ github.workspace }}/spectron"
       run: |
         pytest --rootdir=$HOME/work/spectron
     - name: Build and publish
