--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.7'
+        python-version: '3.7.6'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -23,7 +23,7 @@ jobs:
       env:
         PYTHONPATH: "${{ github.workspace }}:${{ github.workspace }}/spectron"
       run: |
-        pytest --rootdir=$HOME/work/spectron
+        pytest -vv --rootdir=${{ github.workspace }}/spectron
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
