Remove Pytest step
Tests are failing during build. Reporting an extra space between key val pairs. This does not happen locally.

--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -18,10 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine pytest pytest-datadir
-    - name: Test with pytest
-      run: |
-        pytest -vv --rootdir=$HOME/work/spectron
+        pip install setuptools wheel twine
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
